--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "maap": "^1.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-globe.gl": "^2.33.2",
     "react-responsive": "^10.0.1",
     "three": "^0.176.0"
   },
